--- a/Login.html
+++ b/Login.html
@@ -3,6 +3,7 @@
     <head> 
         <link rel="stylesheet" href="estilo.css">
     </head>
+    <title>Login</title>
     <body>
         <div class="loging">
             <h1 class="h1">
