--- a/Login.html
+++ b/Login.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
+    
     <head> 
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="estilo.css">
     </head>
     <title>Login</title>
