--- a/Login.html
+++ b/Login.html
@@ -3,7 +3,7 @@
     
     <head> 
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="estilo.css">
+        <link rel="stylesheet" href="estilo_login.css">
     </head>
     <title>Login</title>
     <body>
